dons_tests/valid_kxi/loop_type_check.kxi
void main(){
    int x = 0;
    while (true) {
        for (x=10;x>0;) {
            if (x > 0) {
                x = x - 1;
            }
        } 
    }
}
