dons_tests/invalid_kxi/bad_loop_type_check.kxi
void main(){
    while ('c') {
        for (;1+1;) {
            if (null) {}
        } 
    }
}
